--- a/uceslim/www/index.html
+++ b/uceslim/www/index.html
@@ -29,7 +29,7 @@ crossorigin=""></script>
 
 <!-- the following CSS is used to set the size of the Map -->
 <style type="text/css">
-		#mapid { height: 180px; }
+		#mapid { height: 500px; }
 </style>
 
 <!-- the following links incorporate the CSS required for custom icon creation -->
@@ -146,12 +146,15 @@ crossorigin=""></script>
             <div id="ucllogo" name="ucllogo">div goes here </div>
           </div>
         </div>
-        <!-- Add a basic empty leaflet map -->
-        <div id="mapid" style="width: 600px; height: 400px;"></div>
       </main>
+	  
+	  <main class="mdl-layout__content mdl-color--grey-100">
+<div id="mapid" style="width: 600px; height: 400px;"></div>
+</main>
+
     </div>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 	<script src="js/rhMenu.js"></script>
-	<script src=”js/leaflet.js”></script>
+	<script src="js/leaflet.js"></script>
   </body>
 </html>
