add a new javascript called usertracking

--- a/uceslim/www/index.html
+++ b/uceslim/www/index.html
@@ -157,5 +157,6 @@ crossorigin=""></script>
 	<script src="js/rhMenu.js"></script>
 	<script src="js/leaflet.js"></script>
 	<script src="js/leafletFunctions.js"></script>
+  <script src="js/userTracking.js"></script>
   </body>
 </html>
