--- a/uceslim/www/index.html
+++ b/uceslim/www/index.html
@@ -157,6 +157,8 @@ crossorigin=""></script>
 	<script src="js/rhMenu.js"></script>
 	<script src="js/leaflet.js"></script>
 	<script src="js/leafletFunctions.js"></script>
+  <script src="js/getEarthquakes.js"></script>
   <script src="js/userTracking.js"></script>
+  <script src="js/startup.js"></script>
   </body>
 </html>
