--- a/uceslim/www/index.html
+++ b/uceslim/www/index.html
@@ -132,7 +132,7 @@ crossorigin=""></script>
           <a class="mdl-navigation__link" href="" onclick='addPointLinePoly();return false'><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">delete</i>Add geometric figures</a>
           <a class="mdl-navigation__link" href="" onclick='getEarthquakes();return false'><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">report</i>Get Earthquakes</a>
           <a class="mdl-navigation__link" href="" onclick='trackLocation();return false'><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">forum</i>Track User Location</a>
-          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">flag</i>Updates</a>
+          <a class="mdl-navigation__link" href="" onclick='trackAndCircle();return false'><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">flag</i>Track and Circle</a>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_offer</i>Promos</a>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">shopping_cart</i>Purchases</a>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">people</i>Social</a>
