--- a/uceslim/www/index.html
+++ b/uceslim/www/index.html
@@ -160,5 +160,6 @@ crossorigin=""></script>
   <script src="js/getEarthquakes.js"></script>
   <script src="js/userTracking.js"></script>
   <script src="js/startup.js"></script>
+  <script>startup(); </script>
   </body>
 </html>
