--- a/uceslim/www/index.html
+++ b/uceslim/www/index.html
@@ -160,6 +160,7 @@ crossorigin=""></script>
   <script src="js/getEarthquakes.js"></script>
   <script src="js/userTracking.js"></script>
   <script src="js/startup.js"></script>
+  <script src="js/utilities.js"></script>
   <script>startup(); </script>
   </body>
 </html>
