--- a/uceslim/platforms/browser/www/index.html
+++ b/uceslim/platforms/browser/www/index.html
@@ -136,7 +136,7 @@ crossorigin=""></script>
           <a class="mdl-navigation__link" href="" onclick='getEarthquakes();return false'><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">report</i>Get Earthquakes</a>
           <a class="mdl-navigation__link" href="" onclick='trackLocation();return false'><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">forum</i>Track User Location</a>
           <a class="mdl-navigation__link" href="" onclick='trackAndCircle();return false'><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">flag</i>Track and Circle</a>
-          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_offer</i>Promos</a>
+          <a class="mdl-navigation__link" href=" http://developer.cege.ucl.ac.uk:30288"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_offer</i>Change Server</a>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">shopping_cart</i>Purchases</a>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">people</i>Social</a>
           <div class="mdl-layout-spacer"></div>
