get the form data from database

--- a/uceslim/platforms/browser/www/index.html
+++ b/uceslim/platforms/browser/www/index.html
@@ -135,7 +135,7 @@ crossorigin=""></script>
           <a class="mdl-navigation__link" href="" onclick='addPointLinePoly();return false'><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">delete</i>Add geometric figures</a>
           <a class="mdl-navigation__link" href="" onclick='getEarthquakes();return false'><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">report</i>Get Earthquakes</a>
           <a class="mdl-navigation__link" href="" onclick='trackLocation();return false'><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">forum</i>Track User Location</a>
-          <a class="mdl-navigation__link" href="" onclick='trackAndCircle();return false'><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">flag</i>Track and Circle</a>
+          <a class="mdl-navigation__link" href="" onclick='getFormData();return false'><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">flag</i>Get Form Data</a>
           <a class="mdl-navigation__link" href=" http://developer.cege.ucl.ac.uk:30288"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_offer</i>Change Server</a>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">shopping_cart</i>Purchases</a>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">people</i>Social</a>
@@ -151,7 +151,7 @@ crossorigin=""></script>
         </div>
 
 
-        <div id="mapid" style="width: 600px; height: 400px;"></div>
+        <div id="mapid" style="width: 700px; height: 400px;"></div>
  
 
       <h4>Change DIV content using AJAX</h4>
@@ -180,6 +180,7 @@ crossorigin=""></script>
   <script src="js/AJAX.js"></script>
   <script src="js/testAJAX.js"></script>
   <script src="js/uploadData.js"></script>
+  <script src="js/getFormData.js"></script>
   <script>startup(); </script>
   </body>
 </html>
