--- a/uceslim/platforms/browser/www/index.html
+++ b/uceslim/platforms/browser/www/index.html
@@ -136,8 +136,8 @@ crossorigin=""></script>
           <a class="mdl-navigation__link" href="" onclick='getEarthquakes();return false'><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">report</i>Get Earthquakes</a>
           <a class="mdl-navigation__link" href="" onclick='trackLocation();return false'><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">forum</i>Track User Location</a>
           <a class="mdl-navigation__link" href="" onclick='getFormData();return false'><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">flag</i>Get Form Data</a>
-          <a class="mdl-navigation__link" href=" http://developer.cege.ucl.ac.uk:30288"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_offer</i>Change Server</a>
-          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">shopping_cart</i>Purchases</a>
+          <a class="mdl-navigation__link" href="" onclick='getFormData2();return false'><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_offer</i>Get Form Data 2</a>
+          <a class="mdl-navigation__link" href="" onclick='getFormData3();return false'><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">shopping_cart</i>Get Form Data 3</a>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">people</i>Social</a>
           <div class="mdl-layout-spacer"></div>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">help_outline</i><span class="visuallyhidden">Help</span></a>
@@ -181,6 +181,8 @@ crossorigin=""></script>
   <script src="js/testAJAX.js"></script>
   <script src="js/uploadData.js"></script>
   <script src="js/getFormData.js"></script>
+  <script src="js/getFormData2.js"></script>
+  <script src="js/getFormData3.js"></script>
   <script>startup(); </script>
   </body>
 </html>
