add pop-up to show the question of the point

--- a/uceslim/platforms/browser/www/index.html
+++ b/uceslim/platforms/browser/www/index.html
@@ -183,6 +183,7 @@ crossorigin=""></script>
   <script src="js/getFormData.js"></script>
   <script src="js/getFormData2.js"></script>
   <script src="js/getFormData3.js"></script>
+  <script src="js/getFormData4.js"></script>
   <script>startup(); </script>
   </body>
 </html>
