find the closest point and show the question pop-up automatically

--- a/uceslim/platforms/browser/www/index.html
+++ b/uceslim/platforms/browser/www/index.html
@@ -138,7 +138,7 @@ crossorigin=""></script>
           <a class="mdl-navigation__link" href="" onclick='getFormData();return false'><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">flag</i>Get Form Data</a>
           <a class="mdl-navigation__link" href="" onclick='getFormData2();return false'><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_offer</i>Get Form Data 2</a>
           <a class="mdl-navigation__link" href="" onclick='getFormData3();return false'><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">shopping_cart</i>Get Form Data 3</a>
-          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">people</i>Social</a>
+          <a class="mdl-navigation__link" href="" onclick='closestFormPoint();return false'><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">people</i>Get Form Data 4</a>
           <div class="mdl-layout-spacer"></div>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">help_outline</i><span class="visuallyhidden">Help</span></a>
         </nav>
